--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.activation.jar=C:\\Users\\imros\\Desktop\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
+file.reference.mail.jar=C:\\Users\\imros\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +44,9 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
