--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.activation.jar=C:\\Users\\imros\\Desktop\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
-file.reference.activation.jar-1=C:\\jaf-1.1.1\\activation.jar
 file.reference.mail.jar=C:\\Users\\imros\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
-file.reference.mail.jar-1=C:\\javamail-1.4.7\\mail.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\apache-tomcat-8.0.33\\lib\\mysql-connector-java-5.1.38-bin.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar-1=C:\\apache-tomcat-8.0.33\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,11 +46,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
     ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
     ${file.reference.activation.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar-1}:\
-    ${file.reference.activation.jar-1}:\
-    ${file.reference.mail.jar-1}
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
