mypage.jsp m_box.css追加

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,14 @@ excludes=
 file.reference.activation.jar=C:\\Users\\imros\\Desktop\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
 file.reference.activation.jar-1=C:\\jaf-1.1.1\\activation.jar
 file.reference.activation.jar-2=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\activation.jar
+file.reference.activation.jar-3=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\activation.jar
 file.reference.mail.jar=C:\\Users\\imros\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 file.reference.mail.jar-1=C:\\javamail-1.4.7\\mail.jar
 file.reference.mail.jar-2=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mail.jar
+file.reference.mail.jar-3=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mail.jar
 file.reference.mysql-connector-java-5.1.43-bin.jar-1=C:\\Users\\\u6a39\u7f8e\u83dc\\Documents\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
 file.reference.mysql-connector-java-5.1.43-bin.jar-2=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mysql-connector-java-5.1.43-bin.jar
+file.reference.mysql-connector-java-5.1.43-bin.jar-3=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mysql-connector-java-5.1.43-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -58,7 +61,10 @@ javac.classpath=\
     ${file.reference.activation.jar-1}:\
     ${file.reference.activation.jar-2}:\
     ${file.reference.mail.jar-2}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar-2}
+    ${file.reference.mysql-connector-java-5.1.43-bin.jar-2}:\
+    ${file.reference.activation.jar-3}:\
+    ${file.reference.mail.jar-3}:\
+    ${file.reference.mysql-connector-java-5.1.43-bin.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
