--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,8 @@
 deploy.ant.properties.file=C:\\Users\\\u6a39\u7f8e\u83dc\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-file.reference.activation.jar=E:\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
-file.reference.activation.jar-2=C:\\Users\\imros\\Desktop\\pbl3\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
-file.reference.mail.jar=C:\\Users\\imros\\Desktop\\pbl3\\javamail1_4_7\\javamail-1.4.7\\mail.jar
-file.reference.mail.jar-2=C:\\Users\\imros\\Desktop\\pbl3\\javamail1_4_7\\javamail-1.4.7\\mail.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar=E:\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar-1=C:\\Users\\imros\\Desktop\\pbl3\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar-2=E:\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
 j2ee.server.domain=C:/Users/\u6a39\u7f8e\u83dc/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\\u6a39\u7f8e\u83dc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
