--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,17 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation.jar=C:\\Users\\imros\\Desktop\\jaf-1_1_1\\jaf-1.1.1\\activation.jar
-file.reference.activation.jar-1=C:\\jaf-1.1.1\\activation.jar
-file.reference.activation.jar-2=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\activation.jar
-file.reference.activation.jar-3=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\activation.jar
-file.reference.mail.jar=C:\\Users\\imros\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
-file.reference.mail.jar-1=C:\\javamail-1.4.7\\mail.jar
-file.reference.mail.jar-2=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mail.jar
-file.reference.mail.jar-3=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mail.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar-1=C:\\Users\\\u6a39\u7f8e\u83dc\\Documents\\mysql-connector-java-5.1.43\\mysql-connector-java-5.1.43-bin.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar-2=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mysql-connector-java-5.1.43-bin.jar
-file.reference.mysql-connector-java-5.1.43-bin.jar-3=C:\\apache-tomcat-8.5.16\\NetBean\u7528\\mysql-connector-java-5.1.43-bin.jar
+file.reference.activation.jar=C:\\Users\\lib\\activation.jar
+file.reference.mail.jar=C:\\Users\\lib\\mail.jar
+file.reference.mysql-connector-java-5.1.43-bin.jar=C:\\Users\\lib\\mysql-connector-java-5.1.43-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,19 +44,9 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar-1}:\
-    ${file.reference.mail.jar-1}:\
-    ${file.reference.activation.jar-1}:\
-    ${file.reference.activation.jar-2}:\
-    ${file.reference.mail.jar-2}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar-2}:\
-    ${file.reference.activation.jar-3}:\
-    ${file.reference.mail.jar-3}:\
-    ${file.reference.mysql-connector-java-5.1.43-bin.jar-3}
+    ${file.reference.mysql-connector-java-5.1.43-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -91,7 +73,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
